<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/agvideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/agplayer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/jzvd_auto_orientation" />

            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdAutoOrizental
                android:id="@+id/jz_auto_oriental"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/jzvd_round" />

            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdRound
                android:id="@+id/jz_round"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:radius="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/extend_jzvdstd_delete_view" />

            <com.example.slbjiaozvideonew.CustomJzvd.MyJzvdStdNoTitleNoClarity
                android:id="@+id/jz_notitle"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/jzvdstd_delete_view_add_lock" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdLockScreen
                android:id="@+id/lock_screen"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/add_share_btn_after_fullscreen" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdShowShareButtonAfterFullscreen
                android:id="@+id/custom_videoplayer_standard_with_share_button"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/show_title_when_fullscreen" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdShowTitleAfterFullscreen
                android:id="@+id/custom_videoplayer_standard_show_title_after_fullscreen"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/show_textureview_after_complete" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdShowTextureViewAfterAutoComplete
                android:id="@+id/custom_videoplayer_standard_show_textureview_aoto_complete"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/auto_complete_after_fullscreen" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdAutoCompleteAfterFullscreen
                android:id="@+id/custom_videoplayer_standard_aoto_complete"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/play_with_1_1" />


            <cn.jzvd.JzvdStd
                android:id="@+id/jz_videoplayer_1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/play_with_16_9" />


            <cn.jzvd.JzvdStd
                android:id="@+id/jz_videoplayer_16_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/volume_after_fullscreen" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdVolumeAfterFullscreen
                android:id="@+id/jz_videoplayer_volume"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/add_volume_btn" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdVolume
                android:id="@+id/custom_videoplayer_standard_with_volume_button"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/play_mp3" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdMp3
                android:id="@+id/jz_videoplayer_mp3"
                android:layout_width="match_parent"
                android:layout_height="200dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="18dp"
                android:text="@string/play_speed" />


            <com.example.slbjiaozvideonew.CustomJzvd.JzvdStdSpeed
                android:id="@+id/jz_videoplayer_speed"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>